--- a/kyrciapgg/kyrciapp/templates/profile.html
+++ b/kyrciapgg/kyrciapp/templates/profile.html
@@ -29,7 +29,7 @@
     }
 
     .rank-info {
-        margin-left: 100px; 
+        width: 40%;
         display: flex; 
         flex-direction: column; 
         align-items: flex-start; 
@@ -40,12 +40,15 @@
         white-space: nowrap; 
         overflow: hidden;
         text-overflow: ellipsis; 
+        width: 150%;
     }
     .rank-row {
-        display: flex;
+        display: block;
         align-items: center;
         gap: 5px; 
     }
+
+
 
 </style>
 </head>
